# fds_orgchart

./: .gitignore  LICENSE  Pipfile  README.md  converter.py  data.py  extract.py  extracted_nodes.csv  graph.py  niklas_pymu_spielerei.py  out.json  out2.json  out3.json  person_data.py  pyproject.toml  schema.json  setup.py
example_content_nodes/: content_nodes.json
example_data/: art_elements.json  content_nodes.json  org_types.json  person_prefixes.json
example_orgcharts/: amt_weiterbildung_und_kultur.json
json_holder/: content_nodes.json  lines.json  rects.json
src/: extract.py
src/organigram_extract/: __init__.py  __main__.py  aggregation.py  cli.py  converter.py  data.py  default_schema.json  extract.py  graph.py  json_parser.py  pdf.py  person_data.py  pipeline.py  semantic_analysis.py  text_pipeline.py
src/organigram_extract/data/: org_types  schema.json
src/organigram_extract/view/: data.json  prototype.html  script.js  styles.css
src/organigram_extract/view/JSON/: data.json  data01.json  data02.json
src/orgxtract/: __init__.py  cli.py  document.py  drawing.py  pdf.py  semantic_analysis.py  text_pipeline.py
src/orgxtract/data/: Besoldungsgruppen.csv  Funktionsbezeichnungen.csv  Funktionsbezeichungen.csv  build.py  org_types  per_positions  per_positions_abbr  per_posts  per_posts_abbr  per_prefixes  per_salutations  per_titles  schema.json  special_cases.jsonl
src/orgxtract/text_pipeline/: __init__.py  cleaning.py  semantic_analysis.py
