[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "orgxtract"
version = "1.0.0"
license = {file = "LICENSE"}
requires-python = ">= 3.12"
dependencies = [
    "pymupdf>=1.24.8",
    "spacy>=3.7.5",
    "llm>=0.15.0",
    "fix-busted-json>=0.0.18",
]
